@@ -13,7 +13,7 @@
             "push-helper": "push.json"
         }
     },
-    "version": "1.3.2-pre04",
+    "version": "1.3.2-pre05",
     "maintainer": "Lothar Ketterer <deltatouch@mailbox.org>",
     "framework" : "ubuntu-sdk-20.04"
 }
